@startuml
!pragma layout smetana

class Circle{
    - double radius
    + Circle(double radius)
}

class Rectangle{
    - double width
    - double height
    + Rectangle(double width, double height)
}

class Triangle{
    - double a
    - double b
    - double c
    + Triangle(double a, double b, double c)
}

class PaintJob{
    - String name
    - ArrayList<Shape>surfaces;
    - ArrayList<Shape>deduction;
    + PaintJob(String name)
    + void addSurfaces (Shape s)
    + void addDeduction (Shape s)
    + double getTotalSurface()
    + double getTotalDeduction()
    + double getPaintableArea()
    + void printSummary()
}

Interface Shape{
    + double getArea()
    + double getPerimeter()
}

PaintJob *-- Shape : has a
Shape <|.. Circle : implements
Shape <|.. Rectangle : implements
Shape <|.. Triangle : implements


@enduml